# oxpulse-sfu-kit

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
docs/: RESEARCH-IMPROVEMENTS.md  ROADMAP.md
docs/superpowers/plans/: 2026-04-22-v0.2-implementation.md  2026-04-23-v0.3-encapsulation.md
examples/: basic-sfu.rs
src/: bandwidth.rs  cc.rs  config.rs  fanout.rs  ids.rs  keyframe.rs  layer_selector.rs  lib.rs  media.rs  metrics.rs  net.rs  origin.rs  propagate.rs  raw.rs  rtc.rs  rtcp_stats.rs  sframe.rs  udp_loop.rs
src/av1/: dependency_descriptor.rs  mod.rs
src/bwe/: estimator.rs  feedback.rs  hysteresis.rs  kalman.rs  loss.rs  mod.rs  subscriber.rs
src/client/: accessors.rs  construct.rs  fanout.rs  keyframe.rs  layer.rs  mod.rs  stats.rs  test_seed.rs  tracks.rs
src/metrics/: mod.rs  noop.rs  prom.rs
src/registry/: drive.rs  lifecycle.rs  mod.rs  test_seams.rs
src/vfm/: frame_marking.rs  mod.rs
tests/: bwe_surfacing.rs  encapsulation_surface.rs  metrics_integration.rs  multi_client.rs  rtcp_stats.rs  serve_socket.rs  simulcast_speaker.rs
